// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse parse media 1`] = `
"width: 18px;
font-size: 12px;
height: 100px;
@media screen and (max-width: 80em) {
  width: 24px;
  font-size: 13px;
}
@media screen and (max-width: 93em) {
  width: 36px;
  font-size: 14px;
}
@media screen and (max-width: 120em) {
  width: 48px;
  font-size: 15px;
}
&:focus {
  border-width: 1px;
  background-color: #009688;
  color: #fff;
}"
`;

exports[`parse parse stand 1`] = `
"width: 18px;
height: 100px;
&:focus {
  width: 24px;
  height: 200px;
}"
`;

exports[`parseJSS parse media 1`] = `
Object {
  "fontSize": "12px",
  "height": "100px",
  "selector": Object {
    "&:focus": Object {
      "backgroundColor": "#009688",
      "borderWidth": "1px",
      "color": "#fff",
    },
    "@media screen and (max-width: 120em)": Object {
      "fontSize": "15px",
      "width": "48px",
    },
    "@media screen and (max-width: 80em)": Object {
      "fontSize": "13px",
      "width": "24px",
    },
    "@media screen and (max-width: 93em)": Object {
      "fontSize": "14px",
      "width": "36px",
    },
  },
  "width": "18px",
}
`;

exports[`parseJSS parse stand 1`] = `
Object {
  "height": "100px",
  "selector": Object {
    "&:focus": Object {
      "height": "200px",
      "width": "24px",
    },
  },
  "width": "18px",
}
`;
